--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://github.com/dheeraj0000",
+  "homepage": "https://devkrishnasai.github.io",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
